--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "naver_search",
+  "name": "naver-megagong",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node server.js",
+    "dev": "vercel dev"
   },
   "author": "heroyooi",
   "license": "MIT",
@@ -11,5 +12,8 @@
   "dependencies": {
     "axios": "^1.7.8",
     "express": "^4.21.1"
+  },
+  "devDependencies": {
+    "vercel": "^39.1.2"
   }
 }
