--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node api/search.js",
     "dev": "vercel dev"
   },
   "author": "heroyooi",
@@ -11,7 +11,8 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.8",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "helmet": "^8.0.0"
   },
   "devDependencies": {
     "vercel": "^39.1.2"
