--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.8",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "helmet": "^8.0.0"
   },
