--- a/package.json
+++ b/package.json
@@ -10,11 +10,6 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.8",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "helmet": "^8.0.0"
-  },
-  "devDependencies": {
-    "vercel": "^39.1.2"
+    "express": "^4.21.1"
   }
 }
